Add ability to auto-create users from chef bags

--- a/templates/default/db2ResponseFile.erb
+++ b/templates/default/db2ResponseFile.erb
@@ -183,7 +183,7 @@ INSTANCE                  = DB2_INST        ** char(8)  no spaces
 ** not locked and that the password has not expired. IBM DB2 pureScale Feature
 ** users must specify a name that is unique across the IBM DB2 pureScale
 ** implementation.
-DB2_INST.NAME             = db2inst1        ** char(8)  no spaces, no upper case letters
+DB2_INST.NAME             = <%= @db2inst1UserName %> ** e.g. db2inst1        ** char(8)  no spaces, no upper case letters
 
 ** The UID will be generated if the keyword is not specified - highly
 ** recommended.
@@ -193,7 +193,7 @@ DB2_INST.GROUP_NAME       = db2iadm1        ** char(30) no spaces
 ** Use a generated GID if no value provided - highly recommended.
 *DB2_INST.GID             =                 ** Unsigned integer
 DB2_INST.HOME_DIRECTORY   =                 ** char(64) no spaces. Valid for root installation only
-DB2_INST.PASSWORD         = <%= @db2Password %> ** Valid for root installation only
+DB2_INST.PASSWORD         = <%= @db2inst1PlainPassword %> ** Valid for root installation only
 *DB2_INST.TYPE            = WSE             ** WSE STANDALONE CLIENT
 
 ** Set the instance to be auto-started after system reboot. The AUTOSTART
@@ -218,7 +218,7 @@ DB2_INST.START_DURING_INSTALL = YES         ** YES or NO. Default is YES.
 
 ** Make sure the user name specified for FENCED_USERNAME is not locked and its
 ** password has not expired.
-DB2_INST.FENCED_USERNAME  = db2sdfe1        ** char(8)  no spaces, no upper case letters
+DB2_INST.FENCED_USERNAME  = <%= @db2sdfe1UserName %> ** e.g. db2sdfe1        ** char(8)  no spaces, no upper case letters
 
 ** If no value is provided for FENCED_UID keyword, the DB2 installer will
 ** generate one for you. This is highly recommended.
@@ -231,7 +231,7 @@ DB2_INST.FENCED_GROUP_NAME = db2fsdm1       ** char(30)  no spaces
 *DB2_INST.FENCED_HOME_DIRECTORY =           ** char(64) no spaces
 
 ** This FENCED_PASSWORD is required if the fenced user ID is a new user
-*DB2_INST.FENCED_PASSWORD =                 ** char(8)
+DB2_INST.FENCED_PASSWORD = <%= @db2sdfe1PlainPassword %>                ** char(8)
 
 ** Text Search Configuration
 ** -------------------------
